<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="app_name">Calculator</string>
    <!-- description -->
    <string name="app_desc">Plugin used to calculate coordinates of an enemy basing on actual position, distance and azimuth</string>

    <string name="calculator">Position Calculator for ATAK</string>
    <string name="send_location">Send location</string>
    <string name="actual_location">Actual position</string>
    <string name="mark_button_text">Add point</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="long_lat">long and lat</string>

</resources>
