<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RadiostationFragment">


    <TextView
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="184dp"
        android:text="@string/app_desc" />

    <TextView
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="263dp"
        android:text="@string/actual_location" />

    <TextView
        android:id="@+id/longLatTextView"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="184dp"
        android:text="@string/long_lat" />


    <Button
        android:id="@+id/sendLocationButton"
        style="@style/darkButton"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="298dp"
        android:padding="6dp"
        android:text="@string/send_location" />

    <EditText
        android:id="@+id/latitude_editText"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="184dp" />

    <EditText
        android:id="@+id/longitude_editText"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="184dp" />

    <Button
        android:id="@+id/markButton"
        style="@style/darkButton"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="310dp"
        android:padding="6dp"
        android:text="@string/mark_button_text" />


</FrameLayout>